fix: Remove target temperatures, too much information, poor formatting

--- a/MMM-HADisplay.css
+++ b/MMM-HADisplay.css
@@ -45,11 +45,6 @@
   color: #90caf9;
 }
 
-.mmm-hadisplay-target {
-  font-size: 0.85em;
-  white-space: nowrap;
-}
-
 .mmm-hadisplay-status {
   text-align: left;
 }
